Fixed potion mixing menu lag